--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SpringLibraryTest3
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/Library.db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/Library?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
